--- a/index.html
+++ b/index.html
@@ -34,7 +34,7 @@
 <div class="display"><input type="text" readonly size="20" id="d"></div>
         <p>
         <input type="button" class="but ceac " value="ac" onclick='c("")'>
-        <input type="button" class="but ceac" value="ce" onclick='c("")'>
+        <input type="button" class="but ceac" value="ce" onclick='back("")'>
         <input type="button" class="but on" value="%" onclick='v("%")'>
         <input type="button" class="but on" value="/" onclick='v("/")'>
         </p>
